frontend finished (needs some polishing through backend and frontend consistency) now userFromQuery has other important information for search view (interactions)
